--- a/css/legge.css
+++ b/css/legge.css
@@ -54,7 +54,7 @@ section{
 }
 
 p {
-  font-family: "varela round";
+  /*font-family: "varela round";*/
   font-size: 18px
 }
 
@@ -105,6 +105,7 @@ section .subheading {
 
 table{
   font-family: "varela round";
+  font-size: 1.2em;
 }
 
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
