--- a/css/legge.css
+++ b/css/legge.css
@@ -4,7 +4,7 @@ body {
 
 a:hover{
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 500;
 }
 #home {
   padding-bottom: 100px;
@@ -27,7 +27,7 @@ section{
   padding-bottom: 4em;
 }
 
-.bubbles {
+.bubbles, .bubbles:hover{
   font-family: sans-serif;
   font-size: 18px;
   text-align: center;
@@ -39,6 +39,7 @@ section{
   color: white;
   font-variant: small-caps;
   margin-bottom: 40px;
+  font-weight: normal;
 }
 
 #projects {
